<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_location">World map</string>
    <string name="menu_skyplot">Skyplot</string>
    <string name="menu_testcalc">Calculate</string>
    <string name="menu_settings">Settings</string>

    <string name="result">Result: </string>
    <string name="placeholder">...</string>
    <string name="drop_db">Delete all data</string>
    <string name="start_data_refresh">Start Refresh</string>
    <string name="stop_data_refresh">Stop Refresh</string>
    <string name="view_csv">View Raw Data</string>
    <string name="run_bm">Run Benchmarking</string>

    <string name="txtbm">Geo Stars Lib/Non-Iterative method</string>
    <string name="txthmm">Hirvonen &amp; Moritz method</string>
    <string name="txttm">Torge method</string>
    <string name="txtaam">Astronomical Almanac 2002 method</string>
    <string name="txtbwm">Bowring method</string>

    <string name="gnss_prefs">com.utahere.gnssapp.prefs</string>
</resources>